Fixed Contact page.

--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,18 @@ layout: default
 </div>
 
 <div id="contact" style="width:320px; height:400px; padding-left:20px">
-<b>Dr. Alan Boyle</b><br>
+<b>Dr. Ryan Mills</b><br>
 
-Email: <a href="mailto:apboyle@umich.edu">apboyle@umich.edu</a><br>
-Phone: (734) 763-7382<br>
-Office: 2049A Palmer Commons<br>
+Email: <a href="mailto:remills@med.umich.edu">remills@med.umich.edu</a><br>
+Phone: 734.647.9628<br>
+Office: 2055B Palmer Commons<br>
 <br />
-Our computational offices are located in the Palmer Commons Building on the edge of Central Campus.
+The Mill Lab is located on the 2nd floor of Palmer Commons. Please feel free to contact us regarding training and employment opportunities, research projects and publications, and software and data availability.
 <br /> <br />
 <a href="http://palmercommons.umich.edu/article/driving-directions">Parking Information</a>
 <br /> <br />
 <b>Shipping:</b><br>
-Dr. Alan Boyle<br>
+Dr. Ryan Mills<br>
 2017 Palmer Commons<br>
 100 Washtenaw Ave.<br>
 Ann Arbor, MI 48109<br>
@@ -34,22 +34,3 @@ Ann Arbor, MI 48109<br>
 <img src="assets/images/palmer.png" width=100%>
 </div>
 
-<div id="contact" style="width:554px; height:270px; padding-right:20px"">
-<b>Wet Lab</b><br>
-The laboratory is located in the Medical Science Research Building (MSRB) I on the 4th floor on University of Michigan's North Campus.<br><br>
-Phone: (734) 764-8231<br>
-<br>
-
-<b>Shipping:</b><br>
-Dr. Alan Boyle<br>
-4526 MSRB I<br>
-1150 W. Medical Center Drive<br>
-Ann Arbor, Michigan 48109-5602<br>
-
-</div>
-
-<div id="contact" style="width:366px; height:270px">
-<img src="assets/images/MSRB1-2-3.jpg">
-</div>
-
-</div>
