--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,19 @@ layout: default
 <div style="width:100%; height:890px">
 
 <div id="contact" style="width:600px; height:400px">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.8978478212002!2d-83.73385229999997!3d42.2807039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae4267e3b0fb%3A0x568ddae57aca9980!2sPalmer+Commons%2C+100+Washtenaw+Ave%2C+Ann+Arbor%2C+MI+48109!5e0!3m2!1sen!2sus!4v1423169225690" width="600" height="420" frameborder="0" style="border:0">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.8978478212002!2d-83.73385229999997!3d42.2807039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae4267e3b0fb%3A0x568ddae57aca9980!2sPalmer+Commons%2C+100+Washtenaw+Ave%2C+Ann+Arbor%2C+MI+48109!5e0!3m2!1sen!2sus!4v1423169225690" width="600" height="380" frameborder="0" style="border:0">
         <p>Your browser does not support iframes.</p>
 </iframe>
 </div>
 
-<div id="contact" style="width:320px; height:420px; padding-left:20px">
+<div id="contact" style="width:320px; height:380px; padding-left:20px">
 <b>Dr. Ryan Mills</b><br>
 
 Email: <a href="mailto:remills@med.umich.edu">remills@med.umich.edu</a><br>
 Phone: 734.647.9628<br>
 Office: 2055B Palmer Commons<br>
 <br />
-The Mill Lab is located on the 2nd floor of Palmer Commons. Please feel free to contact us regarding training and employment opportunities, research projects and publications, and software and data availability.
+The Mill Lab is located on the 2nd floor of Palmer Commons. Please feel free to contact us regarding software and data availability.
 <br /> <br />
 <a href="http://palmercommons.umich.edu/article/driving-directions">Parking Information</a>
 <br /> <br />
