Fixed CSS spacing for column spacing.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 </div>
 
 <div class="row">
-	<div class="left">
+	<div class="column-left">
 		<a href="news/"><h4><i>News</i></h4></a>
 		<center><p class="yellow-bar"></p><center>
 		{% for post in site.posts limit:3 %}
@@ -25,7 +25,7 @@ layout: default
 		</p>
 		{% endfor %}
 	</div>
-	<div class="right">
+	<div class="column-right">
         	<a href="contact.html"><h4><i>Find Us</i></h4></a>
 		<center><p class="yellow-bar"></p><center>
 		<p class="align-left">The Mills Lab is located in the Palmer Commons Building between central campus and the Medical School.</p>
