--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ layout: default
 	<div class="column-narrow">
         	<a href="contact.html"><h4><i>Find Us</i></h4></a>
 		<center><p class="yellow-bar"></p><center>
-		<p class="align-left">The Mills Lab is located in the Palmer Commons Building between central campus and the Medical School.</p>
-		<p><i><a href="http://palmercommons.umich.edu/article/driving-directions"><br>>Parking Information</a><a href="contact.html">View Map</a></i></p>
+		<p>The Mills Lab is located in the Palmer Commons Building between central campus and the Medical School.</p>
+		<p><i><a href="http://palmercommons.umich.edu/article/driving-directions">Parking Information</a><br><a href="contact.html">View Map</a></i></p>
 	</div>
 </div>
 
@@ -29,8 +29,8 @@ layout: default
                 <a href="news/"><h4><i>News</i></h4></a>
                 <center><p class="yellow-bar"></p><center>
                 {% for post in site.posts limit:5 %}
-                <p class="align-left">
-                <i><font color="#888">{{ post.date | date: "%B %d, %Y" }} - </font></i> {{ post.title }}
+                <p>
+                <i><font color="#888">{{ post.date | date: "%B %d, %Y" }} - </font></i><br> {{ post.title }}
                 </p>
                 {% endfor %}
         </div>
