Change background image.

--- a/software.html
+++ b/software.html
@@ -29,19 +29,6 @@ There is an additional program name clusterNumtsVcf which will merge sites ident
 <b>[Update Needed]</b>
 <br>[Authors] <b><em>Journal</em></b> [Reference]</p>
 <br>
-<div class="Nheader">F-seq</div>
-<img src="assets/images/test.jpg" width="200px" class="imgright">
-<p>
-This software is designed to identify both simple and complex rearrangements from paired-end sequencing data.
-</p>
-<br>
-<P>Source code and detailed documentation is available at <a href="https://github.com/mills-lab/svelter/">https://github.com/mills-lab/svelter/</a>.</p>
-<br>
-<p>Reference:<br>
-<b>[Update Needed]</b>
-<br>[Authors] <b><em>Journal</em></b> [Reference]
-</p>
-<br>
 <div class="Nheader">SPECtre</div>
 <img src="assets/images/test.jpg" width="200px" class="imgright">
 <p>
@@ -56,3 +43,17 @@ It is used by calling <em>SPECtre.py</em> with the listed parameters.
 <b>[Update Needed]</b>
 <br>[Authors] <b><em>Journal</em></b> [Reference]
 </p>
+<br>
+<div class="Nheader">SVelter</div>
+<img src="assets/images/test.jpg" width="200px" class="imgright">
+<p>
+This software is designed to identify both simple and complex rearrangements from paired-end sequencing data.
+</p>
+<br>
+<P>Source code and detailed documentation is available at <a href="https://github.com/mills-lab/svelter/">https://github.com/mills-lab/svelter/</a>.</p>
+<br>
+<p>Reference:<br>
+<b>[Update Needed]</b>
+<br>[Authors] <b><em>Journal</em></b> [Reference]
+</p>
+<br>
