Updated People page links, info.

--- a/people.html
+++ b/people.html
@@ -3,7 +3,7 @@ title: People
 layout: default
 positions:
   pi: Principal Investigator
-  postdoc: Postdoctoral Fellow
+  postdoc: Post-doctoral Fellow
   phd: Doctoral Student
   ms: Masters Student
   staff: Staff
